style: added the wide button to login component

--- a/src/app/modules/account/login/login.component.html
+++ b/src/app/modules/account/login/login.component.html
@@ -1,1 +1,10 @@
-<p>login works!</p>
+<div class="container">
+  <div class="container__grid__main">
+    <h1 class="container__title">Proteja-se para proteger o próximo</h1>
+    <h2 class="container__subtitle">Um projeto FIAP com parceria HAOC</h2>
+    <app-wide-button [title]="'Quero me proteger!'"></app-wide-button>
+  </div>
+  <div class="container__grid__login">
+
+  </div>
+</div>
