fix: changed the component bindings

--- a/src/app/shared/buttons/wide-button/wide-button.component.html
+++ b/src/app/shared/buttons/wide-button/wide-button.component.html
@@ -1,3 +1,3 @@
-<div style="width: 200px; height: 30px;">
+<div [ngStyle]="{'height.px': height, 'width.px': width}">
     <button class="button_wide">{{title}}</button>
 </div>
