--- a/src/app/shared/buttons/wide-button/wide-button.component.scss
+++ b/src/app/shared/buttons/wide-button/wide-button.component.scss
@@ -7,4 +7,11 @@
   color: white;
   cursor: pointer;
   width: 100%;height: 100%;
+  transition: all 0.3s ease 0s;
+}
+
+button:hover {
+  background-color: rgba(83,203,209,255);
+  color: #fff;
+  transform: translateY(-3px);
 }
