--- a/src/app/modules/account/login/login.component.html
+++ b/src/app/modules/account/login/login.component.html
@@ -1,10 +1,18 @@
 <div class="container">
-  <div class="container__grid__main">
-    <h1 class="container__title">Proteja-se para proteger o próximo</h1>
-    <h2 class="container__subtitle">Um projeto FIAP com parceria HAOC</h2>
-    <app-wide-button [title]="'Quero me proteger!'"></app-wide-button>
-  </div>
-  <div class="container__grid__login">
+  <div class="container__grid">
+
+    <div class="container__grid__main">
+      <h1 class="container__title">Proteja-se para proteger <br>o próximo</h1>
+      <h2 class="container__subtitle">Um projeto FIAP com parceria HAOC</h2>
+      <app-wide-button [title]="'Quero me proteger!'" [height]="40"></app-wide-button>
+      <img class="container__image" src="../../../../assets/images/p-branco.png">
+    </div>
+
+    <div class="container__grid__login">
+      <app-base-input [label]="'Login'" [id]="'login'"></app-base-input>
+      <app-base-input [label]="'Senha'" [id]="'senha'"></app-base-input>
+      <app-wide-button [title]="'Login'" [height]="40"></app-wide-button>
+    </div>
 
   </div>
 </div>
