--- a/src/app/modules/user/user-panel/user-panel.component.html
+++ b/src/app/modules/user/user-panel/user-panel.component.html
@@ -43,3 +43,8 @@
     </div>
   </div>
 </div>
+<div class="buttons">
+  <app-wide-button [title]="'Consulte os Alertas'" [height]="70"></app-wide-button>
+  <app-wide-button [title]="'Higienização das mãos'" [height]="70"></app-wide-button>
+  <app-wide-button [title]="'Área do colaborador'" [height]="70"></app-wide-button>
+</div>
