--- a/src/app/modules/user/user-panel/user-panel.component.scss
+++ b/src/app/modules/user/user-panel/user-panel.component.scss
@@ -60,6 +60,13 @@
   border: 2px solid rgb(187, 187, 187);
 }
 
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 50%;
+}
+
 @media (max-width: 1845px){
   .container__grid {
     grid-template-columns: 1fr;
@@ -86,5 +93,10 @@
 
   .container__grid__top__card {
     width: 100%;
+  }
+
+  .buttons {
+    flex-direction: column;
+    align-items: center;
   }
 }
