style: new image on header

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,7 @@
 <div class="header">
   <div class="images">
-    <img class="images_fiap" src="../../../assets/images/fiap.png" (click)="goToPage('fiap')">
-    <img class="" src="../../../assets/images/haoc.png" (click)="goToPage('haoc')">
+      <img class="images__fiap" src="../../../assets/images/fiap.png" (click)="goToPage('fiap')">
+      <img class="" src="../../../assets/images/haoc.png" (click)="goToPage('haoc')">
   </div>
+  <img routerLink="/user/panel" class="header__p" src="../../../assets/images/p-branco.png">
 </div>
