new: go back button

--- a/src/app/modules/user/hand-wash/hand-wash.component.html
+++ b/src/app/modules/user/hand-wash/hand-wash.component.html
@@ -1,8 +1,9 @@
 <h1 class="title">Você conhece o jeito certo de higienizar as mãos?</h1>
 <div class="image">
     <img class="image__hand" src="../../../../assets/images/hand_wash.jpg">
+    <app-wide-button style="display: flex; justify-content: center;"
+    routerLink="/user/panel" [title]="'Voltar'" [height]="40"></app-wide-button>
 </div>
-
 
 
 
