--- a/src/app/modules/account/login/login.component.scss
+++ b/src/app/modules/account/login/login.component.scss
@@ -63,3 +63,9 @@
     opacity: 100%;
   }
 }
+
+.container__grid__login__password_change {
+  font-size: 1em;
+  font-weight: 600;
+  cursor: pointer;
+}
