fix: changes on the user panel

--- a/src/app/modules/user/user-panel/user-panel.component.html
+++ b/src/app/modules/user/user-panel/user-panel.component.html
@@ -44,7 +44,7 @@
   </div>
 </div>
 <div class="buttons">
-  <app-wide-button [title]="'Consulte os Alertas'" [height]="70"></app-wide-button>
-  <app-wide-button [title]="'Higienização das mãos'" [height]="70"></app-wide-button>
-  <app-wide-button [title]="'Área do colaborador'" [height]="70"></app-wide-button>
+  <app-wide-button (click)="goToPage('/user/alert')" [title]="'Consulte os Alertas'" [height]="70"></app-wide-button>
+  <app-wide-button (click)="goToPage('/user/hand-wash')" [title]="'Higienização das mãos'" [height]="70"></app-wide-button>
+  <app-wide-button (click)="goToPage('/user/colaborator')" [title]="'Área do colaborador'" [height]="70"></app-wide-button>
 </div>
