--- a/src/app/modules/account/login/login.component.scss
+++ b/src/app/modules/account/login/login.component.scss
@@ -69,3 +69,37 @@
   font-weight: 600;
   cursor: pointer;
 }
+
+input {
+  outline:none;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+  padding-left: 20px;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  color: black;
+  font-size: 1.5em;
+}
+
+.base_input {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  font-family: 'Lato', sans-serif;
+}
+
+.base_input__label {
+  font-size: 1.6em;
+  font-weight: 400;
+  font-style: normal;
+  margin-bottom: 1em;
+}
+
+.base_input__input {
+  border-radius: 25px;
+  border: 1px solid rgb(192, 192, 192);
+  height: 40px;
+  margin-bottom: 1em;
+}
