fix: username from session storage

--- a/src/app/modules/user/user-panel/user-panel.component.html
+++ b/src/app/modules/user/user-panel/user-panel.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="container__grid">
     <div>
-      <h1 class="container__title">Olá, HAOC!</h1>
+      <h1 class="container__title">Olá, {{userName}}</h1>
       <h2 class="container__subtitle">Acompanhe seu progresso diário aqui</h2>
     </div>
 
