new: add register user

--- a/src/app/modules/account/login/login.component.html
+++ b/src/app/modules/account/login/login.component.html
@@ -4,7 +4,7 @@
     <div class="container__grid__main">
       <h1 class="container__title">Proteja-se para proteger <br>o próximo</h1>
       <h2 class="container__subtitle">Um projeto FIAP com parceria HAOC</h2>
-      <app-wide-button [title]="'Quero me proteger!'" [height]="40"></app-wide-button>
+      <app-wide-button routerLink="/account/register" [title]="'Quero me proteger!'" [height]="40"></app-wide-button>
       <img class="container__image" src="../../../../assets/images/p-branco.png">
     </div>
 
