--- a/src/app/modules/account/register/register.component.html
+++ b/src/app/modules/account/register/register.component.html
@@ -1,1 +1,41 @@
-<p>register works!</p>
+<div class="container">
+  <div class="grid">
+    <div class="base_input">
+      <label class="base_input__label" for="name">Nome:</label>
+      <input class="base_input__input" id="name" type="text" required>
+    </div>
+    <div class="base_input">
+      <label class="base_input__label" for="password">Senha:</label>
+      <input class="base_input__input" id="password" type="text" required>
+    </div>
+    <div class="base_input">
+      <label class="base_input__label" for="last_name">Sobrenome:</label>
+      <input class="base_input__input" id="last_name" type="text" required>
+    </div>
+    <div class="base_input">
+      <label class="base_input__label" for="c_password">Confirmar senha:</label>
+      <input class="base_input__input" id="c_password" type="text" required>
+    </div>
+    <div class="base_input">
+      <label class="base_input__label" for="email">Email:</label>
+      <input class="base_input__input" id="email" type="text" required>
+    </div>
+    <div class="base_input">
+      <label class="base_input__label" for="job">Ocupação:</label>
+      <input class="base_input__input" id="job" type="text" placeholder="Ex: Médico, Enfermeiro" required>
+    </div>
+    <div class="base_input">
+      <label class="base_input__label" for="c_email">Confirmar email:</label>
+      <input class="base_input__input" id="c_email" type="text" required>
+    </div>
+  </div>
+  <div class="buttons">
+    <div class="confirm-btn">
+      <app-wide-button [title]="'Criar conta'" [height]="40" [width]=200></app-wide-button>
+    </div>
+    <div class="return-btn">
+      <app-wide-button routerLink="/user/panel" [title]="'Voltar'" [height]="35" [width]=100></app-wide-button>
+    </div>
+  </div>
+</div>
+
