new: add collaborator area

--- a/src/app/modules/user/user-panel/user-panel.component.html
+++ b/src/app/modules/user/user-panel/user-panel.component.html
@@ -38,7 +38,7 @@
   </div>
 </div>
 <div class="buttons">
-  <app-wide-button (click)="goToPage('/user/alert')" [title]="'Consulte os Alertas'" [height]="70"></app-wide-button>
+  <app-wide-button (click)="goToPage('/collaborator/alert')" [title]="'Consulte os Alertas'" [height]="70"></app-wide-button>
   <app-wide-button (click)="goToPage('/user/hand-wash')" [title]="'Higienização das mãos'" [height]="70"></app-wide-button>
-  <app-wide-button (click)="goToPage('/user/colaborator')" [title]="'Área do colaborador'" [height]="70"></app-wide-button>
+  <app-wide-button (click)="goToPage('/user/collaborator-area')" [title]="'Área do colaborador'" [height]="70"></app-wide-button>
 </div>
