--- a/src/app/modules/gamefication/badge/badge.component.scss
+++ b/src/app/modules/gamefication/badge/badge.component.scss
@@ -5,7 +5,7 @@
 .container {
   display: flex;
   width: 50%;
-  height: 70vh;
+  // height: 70vh; this height parameter makes annoying to align things on mobile, and it adds nothing to our advantage
   justify-content: center;
   margin: auto;
 }
