fix: added responsiveness

--- a/src/app/modules/user/hand-wash/hand-wash.component.html
+++ b/src/app/modules/user/hand-wash/hand-wash.component.html
@@ -1,9 +1,17 @@
 <h1 class="title">Você conhece o jeito certo de higienizar as mãos?</h1>
 <div class="image">
-    <img class="image__hand" src="../../../../assets/images/hand_wash.jpg">
-    <app-wide-button style="display: flex; justify-content: center;"
-    routerLink="/user/panel" [title]="'Voltar'" [height]="40"></app-wide-button>
+    <img class="image__hand__pc" src="../../../../assets/images/hand_wash.jpg">
+    <div class="image__hand__m">
+      <img src="../../../../assets/images/hw_01.jpg" alt="">
+      <img src="../../../../assets/images/hw_02.jpg" alt="">
+      <img src="../../../../assets/images/hw_03.jpg" alt="">
+      <img src="../../../../assets/images/hw_04.jpg" alt="">
+      <img src="../../../../assets/images/hw_05.jpg" alt="">
+
+    </div>
 </div>
+<app-wide-button style="display: flex; justify-content: center;"
+    routerLink="/user/panel" [title]="'Voltar'" [height]="40" class="return-btn"></app-wide-button>
 
 
 
